# mvstudiopro

./: .codex_push_test.txt  .dockerignore  .gitignore  .vercelignore  ACTIVE_TODO.md  Dockerfile  PROGRESS_REPORT.md  birefnet-api-notes.txt  drizzle.config.ts  fly.toml  handoff.md  handsoff.md  jobs119.md  kling-cn-pricing.txt  kling-image-api-notes.txt  kling-image-pricing.txt  mdx.md  mocified.nd  modified.md  notes-phase40.md  package.json  pnpm-lock.yaml  run-kling-video.mjs  test_tts.mjs  todo.md  update_carousel.py  upgradecritical.md  vercel.json  vite.config.ts  vitest.config.ts
2026Apr24/: jobs_and_codes.md
2026Apr25/: P0error.md  P0errors_and_codes_part3.md  jobs_and_codes.md
2026Apr26/: errors_and_jobs_p2.md
__archive__/: BACKUP_MANIFEST.md
api/: _app.ts  aimusic.ts  blob-put-image.ts  business.ts  comet-image.ts  context.ts  diag.ts  env-status.ts  export.ts  fal-image.ts  google.ts  index.ts  jobs.ts  jobs.ts.bak_unified_fix  kling-image.ts  me.ts  openai-image.ts  speech-to-text.ts  tencentSes.ts  v.ts  vertex.ts  workflow-model.ts  workflow-test.ts
api_disabled/: me.ts
client/: index.html
docs/: DEEP_RESEARCH_PRO_MAX_GUIDE.md  DEPLOYMENT_BOUNDARIES.md  GMGPT.md  MVStudioPro_Chat_Transcript_20260304-120331.docx  MV_Studio_48H_Execution_Plan_GMT8.docx  MV_Studio_Acceptance_Checklist.docx  P0-growth-data-regression-2026-03-20.md  产品定价与使用说明.md  (+11 more)
services/vimax-agent/: .gitignore  NOTICE  README.md  pyproject.toml
services/vimax-agent/app/: __init__.py  host_bridge_tools.py  plan_export.py  plan_export_test.py  runtime_factory.py  server.py
(+1541 files in other folders)
