[project]
name = "manhua-agent-sidecar"
version = "0.1.0"
description = "HTTP sidecar wrapping vendored agent_runtime for manhua workbench planning"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "openai>=1.95.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "tenacity>=9.1.2",
  "langchain>=0.3.26",
  "langchain-openai>=0.3.27",
  "langchain-community>=0.3.27",
  "pillow>=11.3.0",
  "aiohttp>=3.12.14",
  "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false
